# SnoopyGateway

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.txt  build.sh  log.cfg
devices/: CMakeLists.txt  DeviceMgr.cpp  DeviceMgr.h  device.c  device.h  device_mgr.c  device_mgr.h  map.c  map.h  queue.c  queue.h
devices/light/: SimpleLight.cpp  SimpleLight.h  light.c  light.h  simple_light.c  simple_light.h
sensor/: CMakeLists.txt  bmp180-v2.c  bmp180-v2.h  bmp180.c  bmp180.h  cc2530.c  cc2530.cpp  cc2530.h  hmc5883l.c  hmc5883l.h  ir.c  ir.h  pcf8591.c  pcf8591.h
src/: CMakeLists.txt  CmdService.cpp  CmdService.h  Log.cpp  Log.h  RestApi.cpp  RestApi.h  cmd_service.c  log.c  main.c  main.cpp  restapi.c  restapi.h
test/: register.txt
